# hexagon_sdk_calculator_sim

./: CMakeLists.txt  README.md  calculator_walkthrough.py  cpu.min  hexagon.min
inc/: calculator.idl
src/: calculator_imp.c  calculator_main.c  calculator_test.c  calculator_test.h  calculator_test_main.c  verify.h  version.c
